--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "@uiw/react-textarea-code-editor": "^3.0.2",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "i18next": "^23.10.1",
     "lodash": "^4.17.21",
@@ -20,6 +21,7 @@
     "react-compare-slider": "^3.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
